# fs-swap

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
