[package]
name = "fs-swap"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
description = "Naive implementation of path swap"
license = "MIT"
homepage = "https://github.com/debris/fs-swap"

[target.'cfg(unix)'.dependencies]
libc = "0.2.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["ktmw32", "handleapi", "fileapi", "errhandlingapi", "winbase"] }

[dev-dependencies]
tempdir = "0.3"
