[package]
name = "fs-swap"
version = "0.2.4"
authors = ["debris <marek.kotewicz@gmail.com>"]
description = "Cross-platform implementation of path swap"
license = "MIT"
homepage = "https://github.com/debris/fs-swap"

[target.'cfg(unix)'.dependencies]
libc = "0.2.4"

[target.'cfg(target_os = "macos")'.dependencies]
libloading = "0.5"
lazy_static = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["ktmw32", "handleapi", "fileapi", "errhandlingapi", "winbase"] }

[dev-dependencies]
tempdir = "0.3"

[badges]
travis-ci = { repository = "debris/fs-swap", branch = "master"}
appveyor = { repository = "debris/fs-swap", branch = "master"}
